# aurora-music

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/database/: __init__.py  models.py  session.py
app/metadata/: __init__.py  extractor.py
app/player/: __init__.py  equalizer.py  player.py  queue.py
app/plugins/: __init__.py  base.py  manager.py
app/recommendations/: __init__.py  engine.py
app/themes/: __init__.py  theme_manager.py
app/ui/: __init__.py  main_window.py
app/ui/qml/: ControlButton.qml  LibraryView.qml  Main.qml  NowPlayingView.qml  PlayerControls.qml  PlaylistCard.qml  PlaylistsView.qml  SettingsSection.qml  SettingsView.qml  Sidebar.qml  SidebarButton.qml  TopBar.qml  TrackDelegate.qml
assets/icons/: README.md
assets/themes/: README.md
docs/: DEVELOPMENT.md  INSTALLATION.md
packaging/: aurora-music.desktop  build.sh
packaging/appimage/: AppRun  build_appimage.sh
packaging/debian/DEBIAN/: control  postinst  postrm
packaging/flatpak/: com.auroramusic.AuroraMusic.json  com.auroramusic.AuroraMusic.metainfo.xml
packaging/rpm/: aurora-music.spec
plugins/: README.md  example_plugin.py
tests/: __init__.py  conftest.py  test_database.py  test_equalizer.py  test_metadata.py  test_player.py  test_queue.py
